change auth to md5

--- a/public/assets/css/sb-admin-2.css
+++ b/public/assets/css/sb-admin-2.css
@@ -11712,7 +11712,7 @@ a:focus {
 }
 
 .bg-login-image {
-  background: url("../../assets/img/2.png");
+  background: url("../../assets/img/logologin.png");
   background-position: center;
   background-size: cover;
 }
